# acric

./: .prettierrc  Cargo.toml  build.rs  bun.lockb  contact.html  download.html  index.html  package.json  readme.md  svelte.config.js  tray.rc
_app/: version.json
_app/immutable/assets/: _layout.DErlv1E3.css  _layout.DHU_Blcw.css  _layout.DKewP1OV.css
_app/immutable/chunks/: entry.CNK5ekOg.js  entry.CRlcFTgR.js  entry.DPZkmrHs.js  entry.DnLwe1ZR.js  entry.DvjJVjQ7.js  entry.DxzM5nY8.js  entry.K5NAi_EO.js  entry.O9x033AX.js  entry.z5W2-rLA.js  index.BYT-R5dI.js  index.CexI6c5g.js  paths.BH8qtcIc.js  paths.BlD_DnCA.js  paths.BlHx7puR.js  paths.BrLn8fco.js  paths.CEEmaVgY.js  paths.CFNFQnQZ.js  paths.CWLabamQ.js  paths.DcMPZlaG.js  paths.DlMt0Ghj.js  scheduler.D9T5-P3a.js
_app/immutable/entry/: app.BSyRvTdM.js  app.Bb2uJPLD.js  app.BwFqXAFO.js  app.By20q6vt.js  app.C8M1PJTm.js  app.Cw8yTMuV.js  app.DNaCsfxL.js  app.DU5thGel.js  app.DmoAHwJv.js  start.48ZqXWNr.js  start.BNdxnuUI.js  start.CAHyvNUn.js  start.CH6AhE1m.js  start.Cj55W_kw.js  start.Clv2ybgd.js  start.CmnnGOU7.js  start.CnpnZwG8.js  start.DuxenXIo.js
_app/immutable/nodes/: 0.4IFFUfg2.js  0.BQmM8vcA.js  0.BZjkMJL5.js  0.BwmLBr4D.js  0.CDuUVvXT.js  0.CfQG5wNM.js  0.DYNnj92J.js  0.Dhpxs3g5.js  0.ccTw-5gh.js  1.BHQrvFGi.js  1.Bj7huY5S.js  1.BkenQE3-.js  1.CLHrSng3.js  1.Cd_u6ll6.js  1.DWfFaZk8.js  1.Dm0ezldZ.js  1.DmCeqcgb.js  1.svMyZk0X.js  2.BJuujZiJ.js  2.BUm_-3DT.js  2.BwhT36Mh.js  (+14 more)
contact/: index.html
download/: index.html
src/: app.css  app.html  main.rs
src/routes/: +layout.svelte  +page.svelte
(+2 files in other folders)
